# aoc

./: .gitignore  Main.hs  README.md  aoc.cabal  aoc.nix  default.nix
2021/: aoc.cabal  default.nix
2021/solutions/: Day11.hs  Day14.hs  Day15.hs  Day16.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day23.hs  Day24.hs  Day7.hs  Day9.hs
2022/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs  template.rs  util.rs
2024/: .clangd
2024/src/: day01.cpp  day02.cpp  day04.cpp  day05.cpp  day06.cpp  day08.cpp  day09.cpp  day10.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp
D1/: Solution.hs
D2/: Solution.hs
D3/: Solution.hs
D4/: Solution.hs
solutions/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day22.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
