cabal-version:      2.4
name:               advent-of-code
version:            0.1.0.0
author:             Ollenurb
maintainer:         brunello.mtt@gmail.com
build-type:         Simple

library solutions
  exposed-modules:  Day1,
                    Day2,
                    Day3,
                    Day4,
                    Day5,
                    Day6,
                    Day7,
                    Day8,
                    Day9,
                    Day10,
                    Day11,
                    Day12,
                    Day13,
                    Day14,
                    Day15,
                    Day16,
                    Day17,
                    Day18,
                    Day19,
                    Day20,
                    Day21,
                    Day22,
                    Day23,
                    Day24,
                    Day25
  hs-source-dirs:   solutions
  build-depends:    base ^>=4.14.3.0,
                    containers,
                    split
  default-language: Haskell2010

executable aoc-solver
  main-is:          Main.hs
  build-depends:    solutions,
                    base ^>=4.14.3.0
  hs-source-dirs:   .
  default-language: Haskell2010
